test/sematest/invalid/redefinition_of_variable_in_same_scope.java
class A {
  public static void main(String[] args) {

  }
  public int a;
  public int a;
}